sandbox/parse.output
Grammar

    0 $accept: start $end

    1 start: onevar twovar

    2 onevar: ONE

    3 twovar: TWO


Terminals, with rules where they appear

$end (0) 0
error (256)
ONE (258) 2
TWO (259) 3


Nonterminals, with rules where they appear

$accept (5)
    on left: 0
start (6)
    on left: 1, on right: 0
onevar (7)
    on left: 2, on right: 1
twovar (8)
    on left: 3, on right: 1


State 0

    0 $accept: . start $end

    ONE  shift, and go to state 1

    start   go to state 2
    onevar  go to state 3


State 1

    2 onevar: ONE .

    $default  reduce using rule 2 (onevar)


State 2

    0 $accept: start . $end

    $end  shift, and go to state 4


State 3

    1 start: onevar . twovar

    TWO  shift, and go to state 5

    twovar  go to state 6


State 4

    0 $accept: start $end .

    $default  accept


State 5

    3 twovar: TWO .

    $default  reduce using rule 3 (twovar)


State 6

    1 start: onevar twovar .

    $default  reduce using rule 1 (start)
